feat(historial&detalle-estudiante): añadir filtro al historial y arreglar bug de detalle estudiante

--- a/src/app/pages/login/forgot-password/forgot-password.page.html
+++ b/src/app/pages/login/forgot-password/forgot-password.page.html
@@ -1,35 +1,23 @@
 <app-header backButton="/auth" title="Recuperar Contraseña"></app-header>
 <ion-content>
-  
+
   <div class="d-flex-center">
 
     <form [formGroup]="form" class="auth-form" (ngSubmit)="submit()" (keypress.enter)="submit()">
-    
-      <app-logo></app-logo>
 
-      <app-custom-input
-      auttocomplete="email"
-      icon="mail-outline"
-      [control]="form.controls.email"
-      type="email"
-      label="Correo"
-      ></app-custom-input>
-      
+      <h1 class="title">RECUPERA TU CONTRASEÑA</h1>
+
+      <app-custom-input auttocomplete="email" [control]="form.controls.email" type="email"
+        label="Correo"></app-custom-input>
+
       <div class="validators" *ngIf="form.controls.email.errors && form.controls.email.touched">
 
-        <div *ngIf="form.controls.email.errors?.['required']">El correo es requerido</div>
-        <div *ngIf="form.controls.email.errors?.['email']">Ingrese un Correo valido</div>
-
+        <div *ngIf="form.controls.email.errors?.['required']">Introduce tu correo electrónico para continuar</div>
+        <div *ngIf="form.controls.email.errors?.['email']">Introduce un correo electrónico válido</div>
       </div>
-
-      <ion-button expand="block" color="secondary" mode="ios" class="submit" type="submit" [disabled]="form.invalid">
+      <ion-button expand="block" class="submit" type="submit" color="secondary" mode="ios" [disabled]="form.invalid">
         Recuperar
-        <ion-icon slot="end" name="arrow-forward"></ion-icon>
       </ion-button>
-
     </form>
-
   </div>
-
 </ion-content>
-
