--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -1,3 +1,3 @@
 <ion-img src="assets/icon/favicon.png" class="shield-icon" color="danger"></ion-img>
-<ion-text color="danger">
+<ion-text color="primary">
 </ion-text>
