--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,46 +1,68 @@
-// General styles
+
 .d-flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.title {
+  text-align: center;
+  color: #007bff;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+app-custom-input {
+  margin-bottom: 20px;
+}
+
+.validators {
+  color: rgb(255, 0, 0);
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.ion-text-end {
+  display: block;
+  margin-top: 10px;
+  text-align: end;
+  color: #261f91;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+
+  &:hover {
+    text-decoration: underline;
   }
-  
-  .login-form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 400px;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    border-radius: 10px;
-  }
-  
-  app-custom-input {
-    margin-bottom: 15px;
-  }
-  
-  // Link styles
-  .ion-text-end {
-    display: block;
-    margin-top: 1px;
-    text-align: end;
-    color: #261f91;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-  
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-  
-  // Button styles
-  ion-button.submit {
-    margin-top: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+}
+
+ion-button.submit-button {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  --background: #007bff;
+  border-radius: 5px;
+  height: 45px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.login-background {
+  --background: #f0f4f8;
+  padding: 20px;
+}
