--- a/src/app/pages/main/historial/historial.page.scss
+++ b/src/app/pages/main/historial/historial.page.scss
@@ -54,9 +54,22 @@
   }
   
   ion-title {
-    font-family: cursive, sans-serif;
     display: block;
     margin: 0 auto;
     text-align: center;
+  }
+  
+  .filter-card {
+    margin: 20px; // Espacio alrededor del card
+    padding: 15px; // Espacio interno del card
+    background-color: white; // Fondo blanco para el card
+    border-radius: 10px; // Bordes redondeados
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); // Sombra suave
+  }
+  
+  .filter-buttons {
+    display: flex;
+    justify-content: space-between; // Espacio entre los botones
+    margin-top: 15px; // Margen superior
   }
   
