--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
 
     <ion-title>
       <strong>{{title}}</strong>
-      <div class="admin">CAMPUS DE INCIDENTES</div>
+      <div class="admin">¡ B I E N V E N I D O !</div>
     </ion-title>
   </ion-toolbar>
 </ion-header>
