--- a/src/app/pages/main/historial/historial.page.scss
+++ b/src/app/pages/main/historial/historial.page.scss
@@ -60,16 +60,29 @@
   }
   
   .filter-card {
-    margin: 20px; // Espacio alrededor del card
-    padding: 15px; // Espacio interno del card
-    background-color: white; // Fondo blanco para el card
-    border-radius: 10px; // Bordes redondeados
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); // Sombra suave
+    margin: 20px;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
   
   .filter-buttons {
     display: flex;
-    justify-content: space-between; // Espacio entre los botones
-    margin-top: 15px; // Margen superior
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  
+  .no-results-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  .no-results-message {
+    font-size: 18px;
+    color: #ff0000;
+    text-align: center;
   }
   
